# openenv-email-triage-benchmark

./: .dockerignore  .gitignore  Blog.md  Dockerfile  Pasted markdown.md  README.md  SPACE_PUSH.md  UI_QUICK_REFERENCE.sh  agent_adapter.py  app.py  benchmark_report.py  client.py  eetre_grpo_final.py  environment.py  inference.py  live_agent_loop.py  live_email.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  send_live_reply.py  ui.py  ui_test.py
env/: __init__.py  agent_brain.py  agent_orchestrator.py  data.py  environment.py  grader.py  models.py  tasks.py
graphify-out/: GRAPH_REPORT.md  graph.json
graphify-out/graphify-out/: GRAPH_REPORT.md  edges.csv  graph.json  js.py  nodes.csv
scripts/: push_hf_lite.sh
server/: app.py
static/: index.html  script.js  style.css
